--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>basic-server</module>
         <module>jwt-server</module>
+        <module>username-server</module>
     </modules>
 
 
