--- a/basic-server/src/main/resources/application.yml
+++ b/basic-server/src/main/resources/application.yml
@@ -4,10 +4,12 @@ server:
       timeout: 20s
 
 spring:
-  security:
-    loginType: json
   datasource:
     url: jdbc:mysql://116.62.148.11:3306/xxx?useUnicode=true&characterEncoding=utf-8
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: abc123
+  resources:
+    static-locations: classpath:public,classpath:templates
+  security:
+    loginType: json
