客户端信息和授权码持久化到mysql

--- a/oauth2-server/security-uaa/src/main/resources/application.yml
+++ b/oauth2-server/security-uaa/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: abc123
+  main:
+    allow-bean-definition-overriding: true
 
 jwt:
   secret: abcdefg
