--- a/oauth2-server/security-order/pom.xml
+++ b/oauth2-server/security-order/pom.xml
@@ -25,10 +25,10 @@
         <!--<groupId>org.springframework.security.oauth.boot</groupId>-->
         <!--<artifactId>spring-security-oauth2-autoconfigure</artifactId>-->
         <!--</dependency>-->
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-jwt</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.security</groupId>-->
+            <!--<artifactId>spring-security-jwt</artifactId>-->
+        <!--</dependency>-->
         <!--<dependency>-->
         <!--<groupId>org.springframework.cloud</groupId>-->
         <!--<artifactId>spring-cloud-starter-gateway</artifactId>-->
