--- a/oauth2-server/pom.xml
+++ b/oauth2-server/pom.xml
@@ -14,6 +14,8 @@
     <modules>
         <module>security-order</module>
         <module>security-uaa</module>
+        <module>register-center</module>
+        <module>gateway-server</module>
     </modules>
 
     <dependencyManagement>
@@ -21,15 +23,11 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Hoxton.SR1</version>
+                <version>Hoxton.SR3</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
-            <!--<dependency>-->
-            <!--<groupId>org.springframework.security</groupId>-->
-            <!--<artifactId>spring-security-jwt</artifactId>-->
-            <!--<version>1.0.10.RELEASE</version>-->
-            <!--</dependency>-->
+
             <dependency>
                 <groupId>javax.interceptor</groupId>
                 <artifactId>javax.interceptor-api</artifactId>
