--- a/oauth2-server/gateway-server/pom.xml
+++ b/oauth2-server/gateway-server/pom.xml
@@ -76,11 +76,18 @@
             <version>2.9.2</version>
         </dependency>
 
+        <!-- 工具包 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.4</version>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-crypto</artifactId>
+            <version>5.1.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
