--- a/oauth2-server/gateway-server/src/main/resources/bootstrap.yml
+++ b/oauth2-server/gateway-server/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: gateway-server
+    name: GATEWAY-SERVER
 #  zipkin:
 #    base-url: http://192.168.32.128:9411
 #    enabled: true
@@ -30,14 +30,14 @@ spring:
         locator:
           enabled: true
       routes:
-        - id: MENU-CENTER
-          uri: lb://MENU-CENTER
+        - id: UAA-CENTER
+          uri: lb://UAA-CENTER
           filters:
             - StripPrefix=1
           predicates:
             - Path=/uaa/**  #直接访问菜谱接口
-        - id: MENU-CENTER
-          uri: lb://MENU-CENTER
+        - id: ORDER-SERVER
+          uri: lb://ORDER-SERVER
           filters:
             - StripPrefix=1
           predicates:
