--- a/oauth2-server/security-order/pom.xml
+++ b/oauth2-server/security-order/pom.xml
@@ -94,6 +94,11 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-crypto</artifactId>
+            <version>5.1.5</version>
+        </dependency>
     </dependencies>
 
 </project>
